--- a/index.html
+++ b/index.html
@@ -130,7 +130,16 @@
         
         document.addEventListener('DOMContentLoaded', async () => {
             // Configuração do Firebase
-            const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : { apiKey: "DEMO", authDomain: "DEMO", projectId: "DEMO" };
+            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+            const firebaseConfig = {
+              apiKey: "AIzaSyDkF5F_4wL1tE-BK6J6UnZInENW5rOOA3I",
+              authDomain: "dominio-acb39.firebaseapp.com",
+              projectId: "dominio-acb39",
+              storageBucket: "dominio-acb39.firebasestorage.app",
+              messagingSenderId: "287882033315",
+              appId: "1:287882033315:web:58ba0964bc17c8e008a716",
+              measurementId: "G-018FBT2E4V"
+            };
             const app = initializeApp(firebaseConfig);
             const db = getFirestore(app);
             const auth = getAuth(app);
