--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ars Goetia: Domínio dos Reis - Protótipo Online</title>
+    <title>Ascenção</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { font-family: 'Times New Roman', serif; background-color: #1a1a1a; color: #d1d1d1; }
