--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="game-container" class="max-w-7xl mx-auto">
         <div class="text-center mb-6">
-            <h1 class="text-4xl font-bold text-amber-200">Ars Goetia: Domínio dos Reis</h1>
+            <h1 class="text-4xl font-bold text-amber-200">Ascenção</h1>
             <p class="text-lg text-gray-400">Protótipo Online</p>
         </div>
 
