--- a/index.html
+++ b/index.html
@@ -171,42 +171,28 @@
                 {Nome:"Zagan", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Riqueza"},
                 {Nome:"Belial", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Riqueza"},
                 {Nome:"Vassago", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Conhecimento"},
-                {Nome:"Sitri", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Riqueza"},
                 {Nome:"Ipos", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Conhecimento"},
                 {Nome:"Stolas", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Guerra"},
                 {Nome:"Orobas", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Guerra"},
-                {Nome:"Seere", Título:"Rei", Hierarquia:"Alta", Metal:"", Afinidade:"Riqueza"},
                 {Nome:"Agares", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Conhecimento"},
                 {Nome:"Valefor", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
                 {Nome:"Barbatos", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
-                {Nome:"Gusion", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Conhecimento"},
-                {Nome:"Eligos", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
-                {Nome:"Zepar", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
                 {Nome:"Bathin", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Guerra"},
                 {Nome:"Saleos", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
-                {Nome:"Bune", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
                 {Nome:"Berith", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
                 {Nome:"Astaroth", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Conhecimento"},
-                {Nome:"Focalor", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Guerra"},
                 {Nome:"Vepar", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Guerra"},
                 {Nome:"Vual", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
-                {Nome:"Crocell", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Conhecimento"},
-                {Nome:"Alloces", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Guerra"},
                 {Nome:"Murmur", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Conhecimento"},
                 {Nome:"Gremory", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
-                {Nome:"Vapula", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Conhecimento"},
                 {Nome:"Haures", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Guerra"},
                 {Nome:"Amduscias", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Guerra"},
                 {Nome:"Dantalion", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Riqueza"},
                 {Nome:"Aim", Título:"Duque", Hierarquia:"Média", Metal:"Cobre", Afinidade:"Guerra"},
-                {Nome:"Samigina", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Conhecimento"},
                 {Nome:"Amon", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Riqueza"},
                 {Nome:"Naberius", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Conhecimento"},
                 {Nome:"Forneus", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Riqueza"},
-                {Nome:"Marchosias", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Guerra"},
                 {Nome:"Phenex", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Conhecimento"},
-                {Nome:"Sabnock", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Guerra"},
-                {Nome:"Shax", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Guerra"},
                 {Nome:"Orias", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Conhecimento"},
                 {Nome:"Andras", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Guerra"},
                 {Nome:"Andrealphus", Título:"Marquês", Hierarquia:"Baixa", Metal:"Prata", Afinidade:"Conhecimento"},
@@ -216,23 +202,18 @@
                 {Nome:"Glasya-Labolas", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Conhecimento"},
                 {Nome:"Ronove", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Guerra"},
                 {Nome:"Furfur", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Guerra"},
-                {Nome:"Raum", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Riqueza"},
-                {Nome:"Bifrons", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Conhecimento"},
                 {Nome:"Halphas", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Guerra"},
                 {Nome:"Andromalius", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Riqueza"},
-                {Nome:"Marbas", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Guerra"},
-                {Nome:"Buer", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Conhecimento"},
+                {Nome:"Furcas", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Conhecimento"},
+                {Nome:"Leraje", Título:"Conde", Hierarquia:"Baixa", Metal:"Estanho", Afinidade:"Guerra"},
                 {Nome:"Foras", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Riqueza"},
                 {Nome:"Gaap", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Conhecimento"},
-                {Nome:"Marax", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Conhecimento"},
                 {Nome:"Malphas", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Guerra"},
-                {Nome:"Haagenti", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Riqueza"},
-                {Nome:"Camio", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Conhecimento"},
                 {Nome:"Ose", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Conhecimento"},
                 {Nome:"Amy", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Riqueza"},
                 {Nome:"Valac", Título:"Presidente", Hierarquia:"Baixa", Metal:"Mercúrio", Afinidade:"Riqueza"}
             ];
-            const metals = [...Array(9).fill({Nome: "Cobre", Título: "Duque"}), ...Array(7).fill({Nome: "Prata", Título: "Marquês"}), ...Array(5).fill({Nome: "Mercúrio", Título: "Presidente"}), ...Array(5).fill({Nome: "Estanho", Título: "Conde"})];
+            const metals = [...Array(4).fill({Nome: "Cobre", Título: "Duque"}), ...Array(5).fill({Nome: "Prata", Título: "Marquês"}), ...Array(4).fill({Nome: "Mercúrio", Título: "Presidente"}), ...Array(5).fill({Nome: "Estanho", Título: "Conde"})];
             const seals = Array(2).fill({Nome: "Selo de Salomão"});
             
             const allProphecies = [
