--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ascenção</title>
+    <title>Goetia</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { font-family: 'Times New Roman', serif; background-color: #1a1a1a; color: #d1d1d1; }
@@ -30,7 +30,7 @@
 
     <div id="game-container" class="max-w-7xl mx-auto">
         <div class="text-center mb-6">
-            <h1 class="text-4xl font-bold text-amber-200">Ascenção</h1>
+            <h1 class="text-4xl font-bold text-amber-200">Goetia</h1>
             <p class="text-lg text-gray-400">Protótipo Online</p>
         </div>
 
