--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     @font-face {
         /* Fonte para Títulos */
         font-family: 'FonteDosTitulos'; 
-        src: url('fonts/Scratch.ttf') format('truetype');
+        src: url('fonts/HellsCemetery-Regular.ttf') format('truetype');
     }
 
     @font-face {
@@ -157,7 +157,7 @@
 
     <div id="game-container" class="max-w-7xl mx-auto">
         <div class="text-center mb-6">
-            <h1 class="text-4xl font-bold text-amber-200">Goetia</h1>
+            <h1 class="text-6xl font-bold text-amber-200">Goetia</h1>
             <p class="text-lg text-gray-400">Protótipo Online</p>
         </div>
 
@@ -1220,3 +1220,4 @@
     </script>
 </body>
 </html>
+
