--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <h3 class="text-xl font-bold mb-2 text-amber-300">Chat</h3>
                     <div id="chat-area" class="chat-area rounded-t-lg"></div>
                     <div class="flex">
-                        <input type="text" id="chat-input" placeholder="Digite sua mensagem..." class="flex-grow bg-gray-800 border border-gray-600 text-white p-2 focus:outline-none focus:border-amber-500 rounded-bl-lg">
+                        <input type="text" id="chat-input" placeholder="Digite sua mensagem..." class="text-sm flex-grow bg-gray-800 border border-gray-600 text-white p-2 focus:outline-none focus:border-amber-500 rounded-bl-lg">
                         <button id="send-chat-btn" class="px-4 py-2 bg-amber-700 hover:bg-amber-600 text-white font-bold rounded-br-lg">Enviar</button>
                     </div>
                 </div>
@@ -1224,6 +1224,7 @@
     </script>
 </body>
 </html>
+
 
 
 
