--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                     return;
                 }
             
-                const newGameId = "game-" + Math.random().toString(36).substr(2, 9);
+                const newGameId = Math.random().toString(36).substr(2, 4).toUpperCase();
                 gameId = newGameId;
                 localPlayerId = 'player1';
                 const demonDeck = demons.map(d => ({ ...d, Tipo: 'Demonio' }));
@@ -1370,4 +1370,5 @@
     </script>
 </body>
 </html>
+
 
