--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         background-color: #1a1a1a; 
         color: #d1d1d1; 
     }
+
+    /* ADICIONE ESTE BLOCO ABAIXO */
+    #game-container {
+        position: relative;
+        z-index: 1;
+    }
+    /* FIM DO BLOCO ADICIONADO */
     
     h1, h2, h3, h4 {
         font-family: 'FonteDosTitulos', 'Times New Roman', serif;
@@ -1444,6 +1451,7 @@
 </script>
 </body>
 </html>
+
 
 
 
