--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goetia</title>
+    <title>GOETIA</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
     /* ----- FONTES PERSONALIZADAS ----- */
@@ -1545,4 +1545,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
